fix: malaligned header styles

--- a/style.css
+++ b/style.css
@@ -42,6 +42,18 @@ body {
   padding: 1rem 0;
 }
 
+.logo-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.logo-img {
+  width: 50px;
+  height: 50px;
+}
+
 .logo {
   font-weight: 700;
   font-size: 1.2rem;
@@ -67,11 +79,6 @@ body {
   padding: 0.6rem 1.2rem;
   border-radius: 6px;
   text-decoration: none;
-}
-
-img {
-  max-width: 4%;
-  display: block;
 }
 
 /* ================= HERO ================= */
